parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expr
Rule 1     expr -> PRINT PARENTESE_ABRE expr PARENTESE_FECHA
Rule 2     expr -> expr MAIS termo
Rule 3     expr -> expr MENOS termo
Rule 4     expr -> expr DIVISAO termo
Rule 5     expr -> expr MULTIPLICACAO termo
Rule 6     expr -> expr DIVISAO_INTEIRA termo
Rule 7     expr -> termo
Rule 8     termo -> fator
Rule 9     fator -> INT
Rule 10    fator -> FLOAT
Rule 11    termo -> FLOAT
Rule 12    termo -> INT
Rule 13    termo -> STRING
Rule 14    termo -> PARENTESE_ABRE expr PARENTESE_FECHA

Terminals, with rules where they appear

DIVISAO              : 4
DIVISAO_INTEIRA      : 6
FLOAT                : 10 11
INT                  : 9 12
MAIS                 : 2
MENOS                : 3
MULTIPLICACAO        : 5
PARENTESE_ABRE       : 1 14
PARENTESE_FECHA      : 1 14
PRINT                : 1
STRING               : 13
error                : 

Nonterminals, with rules where they appear

expr                 : 1 2 3 4 5 6 14 0
fator                : 8
termo                : 2 3 4 5 6 7

Parsing method: LALR

state 0

    (0) S' -> . expr
    (1) expr -> . PRINT PARENTESE_ABRE expr PARENTESE_FECHA
    (2) expr -> . expr MAIS termo
    (3) expr -> . expr MENOS termo
    (4) expr -> . expr DIVISAO termo
    (5) expr -> . expr MULTIPLICACAO termo
    (6) expr -> . expr DIVISAO_INTEIRA termo
    (7) expr -> . termo
    (8) termo -> . fator
    (11) termo -> . FLOAT
    (12) termo -> . INT
    (13) termo -> . STRING
    (14) termo -> . PARENTESE_ABRE expr PARENTESE_FECHA
    (9) fator -> . INT
    (10) fator -> . FLOAT

    PRINT           shift and go to state 2
    FLOAT           shift and go to state 6
    INT             shift and go to state 7
    STRING          shift and go to state 8
    PARENTESE_ABRE  shift and go to state 3

    expr                           shift and go to state 1
    termo                          shift and go to state 4
    fator                          shift and go to state 5

state 1

    (0) S' -> expr .
    (2) expr -> expr . MAIS termo
    (3) expr -> expr . MENOS termo
    (4) expr -> expr . DIVISAO termo
    (5) expr -> expr . MULTIPLICACAO termo
    (6) expr -> expr . DIVISAO_INTEIRA termo

    MAIS            shift and go to state 9
    MENOS           shift and go to state 10
    DIVISAO         shift and go to state 11
    MULTIPLICACAO   shift and go to state 12
    DIVISAO_INTEIRA shift and go to state 13


state 2

    (1) expr -> PRINT . PARENTESE_ABRE expr PARENTESE_FECHA

    PARENTESE_ABRE  shift and go to state 14


state 3

    (14) termo -> PARENTESE_ABRE . expr PARENTESE_FECHA
    (1) expr -> . PRINT PARENTESE_ABRE expr PARENTESE_FECHA
    (2) expr -> . expr MAIS termo
    (3) expr -> . expr MENOS termo
    (4) expr -> . expr DIVISAO termo
    (5) expr -> . expr MULTIPLICACAO termo
    (6) expr -> . expr DIVISAO_INTEIRA termo
    (7) expr -> . termo
    (8) termo -> . fator
    (11) termo -> . FLOAT
    (12) termo -> . INT
    (13) termo -> . STRING
    (14) termo -> . PARENTESE_ABRE expr PARENTESE_FECHA
    (9) fator -> . INT
    (10) fator -> . FLOAT

    PRINT           shift and go to state 2
    FLOAT           shift and go to state 6
    INT             shift and go to state 7
    STRING          shift and go to state 8
    PARENTESE_ABRE  shift and go to state 3

    expr                           shift and go to state 15
    termo                          shift and go to state 4
    fator                          shift and go to state 5

state 4

    (7) expr -> termo .

    MAIS            reduce using rule 7 (expr -> termo .)
    MENOS           reduce using rule 7 (expr -> termo .)
    DIVISAO         reduce using rule 7 (expr -> termo .)
    MULTIPLICACAO   reduce using rule 7 (expr -> termo .)
    DIVISAO_INTEIRA reduce using rule 7 (expr -> termo .)
    $end            reduce using rule 7 (expr -> termo .)
    PARENTESE_FECHA reduce using rule 7 (expr -> termo .)


state 5

    (8) termo -> fator .

    MAIS            reduce using rule 8 (termo -> fator .)
    MENOS           reduce using rule 8 (termo -> fator .)
    DIVISAO         reduce using rule 8 (termo -> fator .)
    MULTIPLICACAO   reduce using rule 8 (termo -> fator .)
    DIVISAO_INTEIRA reduce using rule 8 (termo -> fator .)
    $end            reduce using rule 8 (termo -> fator .)
    PARENTESE_FECHA reduce using rule 8 (termo -> fator .)


state 6

    (11) termo -> FLOAT .
    (10) fator -> FLOAT .

  ! reduce/reduce conflict for MAIS resolved using rule 10 (fator -> FLOAT .)
  ! reduce/reduce conflict for MENOS resolved using rule 10 (fator -> FLOAT .)
  ! reduce/reduce conflict for DIVISAO resolved using rule 10 (fator -> FLOAT .)
  ! reduce/reduce conflict for MULTIPLICACAO resolved using rule 10 (fator -> FLOAT .)
  ! reduce/reduce conflict for DIVISAO_INTEIRA resolved using rule 10 (fator -> FLOAT .)
  ! reduce/reduce conflict for $end resolved using rule 10 (fator -> FLOAT .)
  ! reduce/reduce conflict for PARENTESE_FECHA resolved using rule 10 (fator -> FLOAT .)
    MAIS            reduce using rule 10 (fator -> FLOAT .)
    MENOS           reduce using rule 10 (fator -> FLOAT .)
    DIVISAO         reduce using rule 10 (fator -> FLOAT .)
    MULTIPLICACAO   reduce using rule 10 (fator -> FLOAT .)
    DIVISAO_INTEIRA reduce using rule 10 (fator -> FLOAT .)
    $end            reduce using rule 10 (fator -> FLOAT .)
    PARENTESE_FECHA reduce using rule 10 (fator -> FLOAT .)

  ! MAIS            [ reduce using rule 11 (termo -> FLOAT .) ]
  ! MENOS           [ reduce using rule 11 (termo -> FLOAT .) ]
  ! DIVISAO         [ reduce using rule 11 (termo -> FLOAT .) ]
  ! MULTIPLICACAO   [ reduce using rule 11 (termo -> FLOAT .) ]
  ! DIVISAO_INTEIRA [ reduce using rule 11 (termo -> FLOAT .) ]
  ! $end            [ reduce using rule 11 (termo -> FLOAT .) ]
  ! PARENTESE_FECHA [ reduce using rule 11 (termo -> FLOAT .) ]


state 7

    (12) termo -> INT .
    (9) fator -> INT .

  ! reduce/reduce conflict for MAIS resolved using rule 9 (fator -> INT .)
  ! reduce/reduce conflict for MENOS resolved using rule 9 (fator -> INT .)
  ! reduce/reduce conflict for DIVISAO resolved using rule 9 (fator -> INT .)
  ! reduce/reduce conflict for MULTIPLICACAO resolved using rule 9 (fator -> INT .)
  ! reduce/reduce conflict for DIVISAO_INTEIRA resolved using rule 9 (fator -> INT .)
  ! reduce/reduce conflict for $end resolved using rule 9 (fator -> INT .)
  ! reduce/reduce conflict for PARENTESE_FECHA resolved using rule 9 (fator -> INT .)
    MAIS            reduce using rule 9 (fator -> INT .)
    MENOS           reduce using rule 9 (fator -> INT .)
    DIVISAO         reduce using rule 9 (fator -> INT .)
    MULTIPLICACAO   reduce using rule 9 (fator -> INT .)
    DIVISAO_INTEIRA reduce using rule 9 (fator -> INT .)
    $end            reduce using rule 9 (fator -> INT .)
    PARENTESE_FECHA reduce using rule 9 (fator -> INT .)

  ! MAIS            [ reduce using rule 12 (termo -> INT .) ]
  ! MENOS           [ reduce using rule 12 (termo -> INT .) ]
  ! DIVISAO         [ reduce using rule 12 (termo -> INT .) ]
  ! MULTIPLICACAO   [ reduce using rule 12 (termo -> INT .) ]
  ! DIVISAO_INTEIRA [ reduce using rule 12 (termo -> INT .) ]
  ! $end            [ reduce using rule 12 (termo -> INT .) ]
  ! PARENTESE_FECHA [ reduce using rule 12 (termo -> INT .) ]


state 8

    (13) termo -> STRING .

    MAIS            reduce using rule 13 (termo -> STRING .)
    MENOS           reduce using rule 13 (termo -> STRING .)
    DIVISAO         reduce using rule 13 (termo -> STRING .)
    MULTIPLICACAO   reduce using rule 13 (termo -> STRING .)
    DIVISAO_INTEIRA reduce using rule 13 (termo -> STRING .)
    $end            reduce using rule 13 (termo -> STRING .)
    PARENTESE_FECHA reduce using rule 13 (termo -> STRING .)


state 9

    (2) expr -> expr MAIS . termo
    (8) termo -> . fator
    (11) termo -> . FLOAT
    (12) termo -> . INT
    (13) termo -> . STRING
    (14) termo -> . PARENTESE_ABRE expr PARENTESE_FECHA
    (9) fator -> . INT
    (10) fator -> . FLOAT

    FLOAT           shift and go to state 6
    INT             shift and go to state 7
    STRING          shift and go to state 8
    PARENTESE_ABRE  shift and go to state 3

    termo                          shift and go to state 16
    fator                          shift and go to state 5

state 10

    (3) expr -> expr MENOS . termo
    (8) termo -> . fator
    (11) termo -> . FLOAT
    (12) termo -> . INT
    (13) termo -> . STRING
    (14) termo -> . PARENTESE_ABRE expr PARENTESE_FECHA
    (9) fator -> . INT
    (10) fator -> . FLOAT

    FLOAT           shift and go to state 6
    INT             shift and go to state 7
    STRING          shift and go to state 8
    PARENTESE_ABRE  shift and go to state 3

    termo                          shift and go to state 17
    fator                          shift and go to state 5

state 11

    (4) expr -> expr DIVISAO . termo
    (8) termo -> . fator
    (11) termo -> . FLOAT
    (12) termo -> . INT
    (13) termo -> . STRING
    (14) termo -> . PARENTESE_ABRE expr PARENTESE_FECHA
    (9) fator -> . INT
    (10) fator -> . FLOAT

    FLOAT           shift and go to state 6
    INT             shift and go to state 7
    STRING          shift and go to state 8
    PARENTESE_ABRE  shift and go to state 3

    termo                          shift and go to state 18
    fator                          shift and go to state 5

state 12

    (5) expr -> expr MULTIPLICACAO . termo
    (8) termo -> . fator
    (11) termo -> . FLOAT
    (12) termo -> . INT
    (13) termo -> . STRING
    (14) termo -> . PARENTESE_ABRE expr PARENTESE_FECHA
    (9) fator -> . INT
    (10) fator -> . FLOAT

    FLOAT           shift and go to state 6
    INT             shift and go to state 7
    STRING          shift and go to state 8
    PARENTESE_ABRE  shift and go to state 3

    termo                          shift and go to state 19
    fator                          shift and go to state 5

state 13

    (6) expr -> expr DIVISAO_INTEIRA . termo
    (8) termo -> . fator
    (11) termo -> . FLOAT
    (12) termo -> . INT
    (13) termo -> . STRING
    (14) termo -> . PARENTESE_ABRE expr PARENTESE_FECHA
    (9) fator -> . INT
    (10) fator -> . FLOAT

    FLOAT           shift and go to state 6
    INT             shift and go to state 7
    STRING          shift and go to state 8
    PARENTESE_ABRE  shift and go to state 3

    termo                          shift and go to state 20
    fator                          shift and go to state 5

state 14

    (1) expr -> PRINT PARENTESE_ABRE . expr PARENTESE_FECHA
    (1) expr -> . PRINT PARENTESE_ABRE expr PARENTESE_FECHA
    (2) expr -> . expr MAIS termo
    (3) expr -> . expr MENOS termo
    (4) expr -> . expr DIVISAO termo
    (5) expr -> . expr MULTIPLICACAO termo
    (6) expr -> . expr DIVISAO_INTEIRA termo
    (7) expr -> . termo
    (8) termo -> . fator
    (11) termo -> . FLOAT
    (12) termo -> . INT
    (13) termo -> . STRING
    (14) termo -> . PARENTESE_ABRE expr PARENTESE_FECHA
    (9) fator -> . INT
    (10) fator -> . FLOAT

    PRINT           shift and go to state 2
    FLOAT           shift and go to state 6
    INT             shift and go to state 7
    STRING          shift and go to state 8
    PARENTESE_ABRE  shift and go to state 3

    expr                           shift and go to state 21
    termo                          shift and go to state 4
    fator                          shift and go to state 5

state 15

    (14) termo -> PARENTESE_ABRE expr . PARENTESE_FECHA
    (2) expr -> expr . MAIS termo
    (3) expr -> expr . MENOS termo
    (4) expr -> expr . DIVISAO termo
    (5) expr -> expr . MULTIPLICACAO termo
    (6) expr -> expr . DIVISAO_INTEIRA termo

    PARENTESE_FECHA shift and go to state 22
    MAIS            shift and go to state 9
    MENOS           shift and go to state 10
    DIVISAO         shift and go to state 11
    MULTIPLICACAO   shift and go to state 12
    DIVISAO_INTEIRA shift and go to state 13


state 16

    (2) expr -> expr MAIS termo .

    MAIS            reduce using rule 2 (expr -> expr MAIS termo .)
    MENOS           reduce using rule 2 (expr -> expr MAIS termo .)
    DIVISAO         reduce using rule 2 (expr -> expr MAIS termo .)
    MULTIPLICACAO   reduce using rule 2 (expr -> expr MAIS termo .)
    DIVISAO_INTEIRA reduce using rule 2 (expr -> expr MAIS termo .)
    $end            reduce using rule 2 (expr -> expr MAIS termo .)
    PARENTESE_FECHA reduce using rule 2 (expr -> expr MAIS termo .)


state 17

    (3) expr -> expr MENOS termo .

    MAIS            reduce using rule 3 (expr -> expr MENOS termo .)
    MENOS           reduce using rule 3 (expr -> expr MENOS termo .)
    DIVISAO         reduce using rule 3 (expr -> expr MENOS termo .)
    MULTIPLICACAO   reduce using rule 3 (expr -> expr MENOS termo .)
    DIVISAO_INTEIRA reduce using rule 3 (expr -> expr MENOS termo .)
    $end            reduce using rule 3 (expr -> expr MENOS termo .)
    PARENTESE_FECHA reduce using rule 3 (expr -> expr MENOS termo .)


state 18

    (4) expr -> expr DIVISAO termo .

    MAIS            reduce using rule 4 (expr -> expr DIVISAO termo .)
    MENOS           reduce using rule 4 (expr -> expr DIVISAO termo .)
    DIVISAO         reduce using rule 4 (expr -> expr DIVISAO termo .)
    MULTIPLICACAO   reduce using rule 4 (expr -> expr DIVISAO termo .)
    DIVISAO_INTEIRA reduce using rule 4 (expr -> expr DIVISAO termo .)
    $end            reduce using rule 4 (expr -> expr DIVISAO termo .)
    PARENTESE_FECHA reduce using rule 4 (expr -> expr DIVISAO termo .)


state 19

    (5) expr -> expr MULTIPLICACAO termo .

    MAIS            reduce using rule 5 (expr -> expr MULTIPLICACAO termo .)
    MENOS           reduce using rule 5 (expr -> expr MULTIPLICACAO termo .)
    DIVISAO         reduce using rule 5 (expr -> expr MULTIPLICACAO termo .)
    MULTIPLICACAO   reduce using rule 5 (expr -> expr MULTIPLICACAO termo .)
    DIVISAO_INTEIRA reduce using rule 5 (expr -> expr MULTIPLICACAO termo .)
    $end            reduce using rule 5 (expr -> expr MULTIPLICACAO termo .)
    PARENTESE_FECHA reduce using rule 5 (expr -> expr MULTIPLICACAO termo .)


state 20

    (6) expr -> expr DIVISAO_INTEIRA termo .

    MAIS            reduce using rule 6 (expr -> expr DIVISAO_INTEIRA termo .)
    MENOS           reduce using rule 6 (expr -> expr DIVISAO_INTEIRA termo .)
    DIVISAO         reduce using rule 6 (expr -> expr DIVISAO_INTEIRA termo .)
    MULTIPLICACAO   reduce using rule 6 (expr -> expr DIVISAO_INTEIRA termo .)
    DIVISAO_INTEIRA reduce using rule 6 (expr -> expr DIVISAO_INTEIRA termo .)
    $end            reduce using rule 6 (expr -> expr DIVISAO_INTEIRA termo .)
    PARENTESE_FECHA reduce using rule 6 (expr -> expr DIVISAO_INTEIRA termo .)


state 21

    (1) expr -> PRINT PARENTESE_ABRE expr . PARENTESE_FECHA
    (2) expr -> expr . MAIS termo
    (3) expr -> expr . MENOS termo
    (4) expr -> expr . DIVISAO termo
    (5) expr -> expr . MULTIPLICACAO termo
    (6) expr -> expr . DIVISAO_INTEIRA termo

    PARENTESE_FECHA shift and go to state 23
    MAIS            shift and go to state 9
    MENOS           shift and go to state 10
    DIVISAO         shift and go to state 11
    MULTIPLICACAO   shift and go to state 12
    DIVISAO_INTEIRA shift and go to state 13


state 22

    (14) termo -> PARENTESE_ABRE expr PARENTESE_FECHA .

    MAIS            reduce using rule 14 (termo -> PARENTESE_ABRE expr PARENTESE_FECHA .)
    MENOS           reduce using rule 14 (termo -> PARENTESE_ABRE expr PARENTESE_FECHA .)
    DIVISAO         reduce using rule 14 (termo -> PARENTESE_ABRE expr PARENTESE_FECHA .)
    MULTIPLICACAO   reduce using rule 14 (termo -> PARENTESE_ABRE expr PARENTESE_FECHA .)
    DIVISAO_INTEIRA reduce using rule 14 (termo -> PARENTESE_ABRE expr PARENTESE_FECHA .)
    $end            reduce using rule 14 (termo -> PARENTESE_ABRE expr PARENTESE_FECHA .)
    PARENTESE_FECHA reduce using rule 14 (termo -> PARENTESE_ABRE expr PARENTESE_FECHA .)


state 23

    (1) expr -> PRINT PARENTESE_ABRE expr PARENTESE_FECHA .

    MAIS            reduce using rule 1 (expr -> PRINT PARENTESE_ABRE expr PARENTESE_FECHA .)
    MENOS           reduce using rule 1 (expr -> PRINT PARENTESE_ABRE expr PARENTESE_FECHA .)
    DIVISAO         reduce using rule 1 (expr -> PRINT PARENTESE_ABRE expr PARENTESE_FECHA .)
    MULTIPLICACAO   reduce using rule 1 (expr -> PRINT PARENTESE_ABRE expr PARENTESE_FECHA .)
    DIVISAO_INTEIRA reduce using rule 1 (expr -> PRINT PARENTESE_ABRE expr PARENTESE_FECHA .)
    $end            reduce using rule 1 (expr -> PRINT PARENTESE_ABRE expr PARENTESE_FECHA .)
    PARENTESE_FECHA reduce using rule 1 (expr -> PRINT PARENTESE_ABRE expr PARENTESE_FECHA .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: reduce/reduce conflict in state 6 resolved using rule (fator -> FLOAT)
WARNING: rejected rule (termo -> FLOAT) in state 6
WARNING: reduce/reduce conflict in state 7 resolved using rule (fator -> INT)
WARNING: rejected rule (termo -> INT) in state 7
WARNING: Rule (termo -> FLOAT) is never reduced
WARNING: Rule (termo -> INT) is never reduced
